--- a/php/composer.json
+++ b/php/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "software-crafters-murcia/kata-template",
     "require": {
-        "php": "^7.4"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -9,8 +9,13 @@
     },
     "autoload": {
         "psr-4": {
-            "KataTemplate\\": "src",
-            "KataTemplate\\Test\\": "tests"
+            "SpiderKata\\": "src",
+            "SpiderKata\\Test\\": "tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true
         }
     }
 }
