--- a/php/composer.json
+++ b/php/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "software-crafters-murcia/kata-template",
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^7.4|^8.0",
+      "ext-readline": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
